--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "MaryTTS"
   ],
   "author": "Martin Mende",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "request": "^2.61.0",
     "xml2js": "^0.4.11"
